atualização em produtos

--- a/produtos.html
+++ b/produtos.html
@@ -14,16 +14,16 @@
     <header>
         <div class="topo">
             <div class="container">
-                <a href="index.html"><img src="./images/logo.png" alt="" class="logo"></a>
-                <div class="container-input">
-                    <button class="login-btn btn">Login</button>
-                    <div>
-                        <input type="text" maxlength="35" placeholder="O que deseja encontrar?">
-                        <button><i class="fa-solid fa-magnifying-glass"></i></button>
-                    </div>
+              <a href="index.html"><img src="./images/logo.png" alt="" class="logo"></a>
+              <div class="container-input">
+                <a href="login.html"><button class="login-btn btn">Login</button></a>
+                <div>
+                  <input type="text" maxlength="35" placeholder="O que deseja encontrar?">
+                  <button><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
+              </div>
             </div>
-        </div>
+          </div>
     </header>
     <main>
         <div class="container">
