Adição de scripts

--- a/produto.html
+++ b/produto.html
@@ -6,20 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/principal.css">
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/produto.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/162b81ecbe.js" crossorigin="anonymous"></script>
-    <title>Alura Geek</title>
+    <title>Alura Geek - Produto</title>
 </head>
 
 <body>
     <header>
         <div class="topo">
             <div class="container">
-                <a href="index.html"><img src="./images/logo.png" alt="" class="logo"></a>
-                <div class="container-input"><button class="login-btn btn">Login</button>
+                <a href="index.html">
+                    <img src="./images/logo.png" alt="" class="logo">
+                </a>
+                <div class="container-input">
+                    <button class="login-btn btn">Login</button>
                     <div>
                         <input type="text" maxlength="35" placeholder="O que deseja encontrar?">
-                        <button><i class="fa-solid fa-magnifying-glass"></i></button>
+                        <button>
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -27,13 +35,12 @@
     </header>
     <main>
         <div class="container">
-            <div class="login-container">
-                <form action="#">
-                    <p id="p" class="titulo bold">Iniciar sessão</p>
-                    <input type="email" placeholder="Escreva seu email">
-                    <input type="password" placeholder="Digite sua senha">
-                    <button type="submit" class="entrar-btn btn">Entrar</button>
-                </form>
+            <div class="container-item-produtos"></div>
+            <div class="container-produtos-similares">
+                <h3 class="titulo-produtos-similares titulo">
+                    produtos similares
+                </h3>
+                <div class="container-items"></div>
             </div>
         </div>
     </main>
@@ -58,8 +65,12 @@
                             <input type="text" id="name" maxlength="50" required>
                             <label for="name">Nome</label>
                         </div>
+
                         <textarea id="message" placeholder="Escreva sua mensagem" maxlength="200"></textarea>
-                        <button class="btn" type="submit">Enviar Mensagem</button>
+
+                        <button class="btn" type="submit">
+                            Enviar Mensagem
+                        </button>
                     </form>
                 </div>
             </div>
@@ -67,12 +78,18 @@
         <div class="rodape">
             <p>Desenvolvido por Leandro Menezes<br><span id="data">2022</span></p>
             <div>
-                <a href="https://github.com/leandroOmenezes/" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/leandro-menezes-47336b1a2/" target="_blank"><i
-                        class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/leandroOmenezes" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/leandro-menezes-47336b1a2/" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
             </div>
         </div>
     </footer>
+
+    <script src="./js/data.js"></script>
+    <script src="./js/produto.js"></script>
 </body>
 
 </html>
