--- a/produtos.html
+++ b/produtos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/principal.css">
     <link rel="stylesheet" href="./css/produtos.css">
     <script src="https://kit.fontawesome.com/162b81ecbe.js" crossorigin="anonymous"></script>
     <title>Alura Geek</title>
@@ -39,7 +40,7 @@
                     </div>
                     <p class="nome-produto">Bis xtra original</p>
                     <p class="preco-produto">R$ 3,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000001</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -48,7 +49,7 @@
                     </div>
                     <p class="nome-produto">Kit Kat Dark 41,5g</p>
                     <p class="preco-produto">R$ 2,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000002</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -57,7 +58,7 @@
                     </div>
                     <p class="nome-produto">Kit Kat White 41,5g</p>
                     <p class="preco-produto">R$ 2,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000003</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -66,7 +67,7 @@
                     </div>
                     <p class="nome-produto">Caixa de Bombom Especialidades Nestle 251g</p>
                     <p class="preco-produto">R$ 8,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000004</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -75,7 +76,7 @@
                     </div>
                     <p class="nome-produto">Chocolate ao Leite Goroto 90g</p>
                     <p class="preco-produto">R$ 3,99</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000005</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -84,7 +85,7 @@
                     </div>
                     <p class="nome-produto">Alpino 90g Nestle</p>
                     <p class="preco-produto">R$ 4,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000006</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -93,7 +94,7 @@
                     </div>
                     <p class="nome-produto">Bis original</p>
                     <p class="preco-produto">R$ 5,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000007</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -102,7 +103,7 @@
                     </div>
                     <p class="nome-produto">Caixa De Bombom Garoto 250g</p>
                     <p class="preco-produto">R$ 6,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000008</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -111,7 +112,7 @@
                     </div>
                     <p class="nome-produto">Bis xtra Oreo Lacta 40g</p>
                     <p class="preco-produto">R$ 3,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000009</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -120,7 +121,7 @@
                     </div>
                     <p class="nome-produto">Classic ao Leite Nestlé 90g</p>
                     <p class="preco-produto">R$ 4,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000010</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -129,7 +130,7 @@
                     </div>
                     <p class="nome-produto">Galak Nestlé 90g</p>
                     <p class="preco-produto">R$ 4,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000011</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -138,7 +139,7 @@
                     </div>
                     <p class="nome-produto">Kit 4 Un. Barras chocolate Hershey's</p>
                     <p class="preco-produto">R$ 14,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000012</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -147,7 +148,7 @@
                     </div>
                     <p class="nome-produto">Dose Dupla de Barras chocolate Hershey's</p>
                     <p class="preco-produto">R$ 34,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000013</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -156,7 +157,7 @@
                     </div>
                     <p class="nome-produto">Kit 5 Un. Barras Hershey's 90g</p>
                     <p class="preco-produto">R$ 19,95</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000014</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -165,7 +166,7 @@
                     </div>
                     <p class="nome-produto">Kit Completo Special Dark</p>
                     <p class="preco-produto">R$ 39,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000015</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -174,7 +175,7 @@
                     </div>
                     <p class="nome-produto">Tablete Amendoim Hershey's 90g</p>
                     <p class="preco-produto">R$ 3,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000016</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -183,7 +184,7 @@
                     </div>
                     <p class="nome-produto">Kit 4 un. Barras Chocolate Branco, Cookies'n'Creme, Special Dark Laranja e Ao Leite Recheada Reese's</p>
                     <p class="preco-produto">R$ 14,99</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000017</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -192,7 +193,7 @@
                     </div>
                     <p class="nome-produto">Cocolate ao Leite Disqueti Dori 40g</p>
                     <p class="preco-produto">R$ 1,29</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000018</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -201,7 +202,7 @@
                     </div>
                     <p class="nome-produto">Mentos Tutti Fresh 5 Gomas 8,5g</p>
                     <p class="preco-produto">R$ 0,99</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000019</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -210,7 +211,7 @@
                     </div>
                     <p class="nome-produto">Mentos Melancia 5 Gomas 8,5g</p>
                     <p class="preco-produto">R$ 0,99</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000020</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -219,7 +220,7 @@
                     </div>
                     <p class="nome-produto">Biscoito Max Wafer Bauducco 117g</p>
                     <p class="preco-produto">R$ 2,29</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000021</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -228,7 +229,7 @@
                     </div>
                     <p class="nome-produto">Caixa Bombom Lacta 250,6g</p>
                     <p class="preco-produto">R$ 8,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000022</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -237,7 +238,7 @@
                     </div>
                     <p class="nome-produto">Tablete Shot 90g</p>
                     <p class="preco-produto">R$ 6,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000023</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -246,7 +247,7 @@
                     </div>
                     <p class="nome-produto">Tablete Laka Oreo 90g</p>
                     <p class="preco-produto">R$ 6,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000024</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -255,7 +256,7 @@
                     </div>
                     <p class="nome-produto">Tablete Diamante Negro 90g</p>
                     <p class="preco-produto">R$ 6,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000025</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -264,7 +265,7 @@
                     </div>
                     <p class="nome-produto">Tablete Branco com Cookies 90g</p>
                     <p class="preco-produto">R$ 3,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000026</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -273,7 +274,7 @@
                     </div>
                     <p class="nome-produto">Tablete Amendoim 90g</p>
                     <p class="preco-produto">R$ 3,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000027</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -282,7 +283,7 @@
                     </div>
                     <p class="nome-produto">Batata pringles original 114G</p>
                     <p class="preco-produto">R$ 8,99</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000028</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -291,7 +292,7 @@
                     </div>
                     <p class="nome-produto">Confeito M&Ms Chocolate ao Leite 148g Mars</p>
                     <p class="preco-produto">R$ 7,99</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000029</p>
                 </div>
                 <div class="item">
                     <button class="excluir"><i class="fa-solid fa-trash"></i></button>
@@ -300,7 +301,7 @@
                     </div>
                     <p class="nome-produto">Kit Kat Original 41,5g</p>
                     <p class="preco-produto">R$ 2,90</p>
-                    <p class="id-produto">#000000</p>
+                    <p class="id-produto">#000030</p>
                 </div>
             </div>
         </div>
@@ -341,8 +342,8 @@
             </div>
         </div>
     </footer>
-    <script src="./script/data.js"></script>
-    <script src="./script/produtos.js"></script>
+    <script src="./js/data.js"></script>
+    <script src="./js/produtos.js"></script>
 </body>
 
 </html>
