--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </header>
   <main>
-    <div class="container container-section-items">
+    <!--div class="container container-section-items">
       <div class="titulo-section-items">
         <h3 class="titulo" id="nestle">Nestlé</h3>
         <a href="produtos.html">Ver tudo<i class="fa-solid fa-arrow-right-long"></i></a>
@@ -304,7 +304,7 @@
           <P class="preco-produto">R$ 0,99</P>
           <a href="produto.html" class="link-produto">Ver produto</a>
         </div>
-      </div>
+      </div-->
   </main>
   <footer>
     <div class="info-contato">
