--- a/add-produto.html
+++ b/add-produto.html
@@ -32,10 +32,10 @@
                         <input type="text" id="name" maxlength="50" required>
                         <label for="name">URL da imagem</label>
                     </div>
-                    <div class="single-input2">
+                    <!--div class="single-input2">
                         <input type="text" id="name" maxlength="50" required>
                         <label for="name">Categoria</label>
-                    </div>
+                    </div-->
                     <div class="single-input2">
                         <input type="text" id="name" maxlength="50" required>
                         <label for="name">Nome do produto</label>
@@ -44,7 +44,7 @@
                         <input type="text" id="name" maxlength="50" required>
                         <label for="name">Preço do produto</label>
                     </div>
-                    <textarea name="descricao" placeholder="Descrição do produto"></textarea>
+                    <!--textarea name="descricao" placeholder="Descrição do produto"></textarea-->
                     <button type="submit" class="add-produto-btn btn">Adicionar produto</button>
                 </form>
             </div>
