--- a/produto.html
+++ b/produto.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="container-info-form">
                     <p class="bold titulo">Fale conosco</p>
-                    <form action="#">
+                    <form>
                         <div class="single-input">
                             <input type="text" id="name" maxlength="50" required>
                             <label for="name">Nome</label>
@@ -88,8 +88,8 @@
         </div>
     </footer>
 
-    <script src="./js/data.js"></script>
-    <script src="./js/produto.js"></script>
+    <script src="./controllers/data.js"></script>
+    <script src="./controllers/produto.js"></script>
 </body>
 
 </html>
