--- a/produtos.html
+++ b/produtos.html
@@ -322,7 +322,7 @@
                 </div>
                 <div class="container-info-form">
                     <p class="bold titulo">fale conosco</p>
-                    <form action="#">
+                    <form>
                         <div class="single-input">
                             <input type="text" id="name" maxlength="50" required>
                             <label for="name">Nome</label>
@@ -342,8 +342,8 @@
             </div>
         </div>
     </footer>
-    <script src="./js/data.js"></script>
-    <script src="./js/produtos.js"></script>
+    <script src="./controllers/data.js"></script>
+    <script src="./controllers/produtos.js"></script>
 </body>
 
 </html>
